@@ -268,6 +268,7 @@
  - (tim) [openssh/sshpty.c openssh/openbsd-compat/port-tun.c] put in some
    includes removed from includes.h
  - (dtucker) [configure.ac] Fix glob test conversion to AC_TRY_COMPILE
+ - (djm) [includes.h] Put back paths.h, it is needed in defines.h
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
@@ -4169,4 +4170,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4221 2006/03/15 10:31:39 dtucker Exp $
+$Id: ChangeLog,v 1.4222 2006/03/15 10:48:54 djm Exp $
